[package]
name = "wxxxdh"
version = "0.1.0"
edition = "2021"
authors = ["Wasmium Network Developers <hq@wasmium.network>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.3.1"
borsh = "0.9.3"
ed25519-dalek = { version = "1.0.1" }
hex = "0.4.3"
rand = "0.7"
tai64 = "4.0.0"
x25519-dalek = { git = "https://github.com/wasmium/x25519-dalek.git", features = [
    "reusable_secrets",
] }
